welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:14: error: ';' expected but ')' found.
while (estSurBiscuit()!= true ) && estFaceMur() == false){
                                                        ^